option('xcb', type: 'feature', value: 'auto', description: 'xcb support for X11 input and output')
option('pulse', type: 'feature', value: 'auto', description: 'PulseAudio input and output')
option('wayland', type: 'feature', value: 'auto', description: 'Wayland input and output')
option('libavdevice', type: 'feature', value: 'auto', description: 'libavdevice inputs and outputs')

option('interface', type: 'feature', value: 'auto', description: 'Vulkan GUI')
option('libedit', type: 'feature', value: 'auto', description: 'libedit support (for a REPL interface)')

option('tools', type: 'feature', value: 'enabled', description: 'txproto executable')
